--- a/src/servlet.properties
+++ b/src/servlet.properties
@@ -1,4 +1,11 @@
 imageFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 zipFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 resultFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
+
+# Die Zeichen links vom "keySeparator" sind der fachliche Key. 
+# Dateien mit gleichem fachlichen Key werden in ein gemeinsames Zip-File gepackt
 keySeparator=_GHNW
+
+# Die Zeichen rechts vom "runIdSeparator" sind die runId. 
+# Die runId macht den Dateinamen im Dateisystem eindeutig. 
+runIdSeparator=.
