--- a/src/servlet.properties
+++ b/src/servlet.properties
@@ -4,7 +4,8 @@ resultFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 
 # Die Zeichen links vom "keySeparator" sind der fachliche Key. 
 # Dateien mit gleichem fachlichen Key werden in ein gemeinsames Zip-File gepackt
-keySeparator=_GHNW
+#keySeparator=_GHNW
+keySeparator=_
 
 # Die Zeichen rechts vom "runIdSeparator" sind die runId. 
 # Die runId macht den Dateinamen im Dateisystem eindeutig. 
