--- a/src/servlet.properties
+++ b/src/servlet.properties
@@ -1,4 +1,8 @@
+# owner: Rechenkern
 imageFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
+zipArchivFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
+
+# owner: Captiva
 zipFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 resultFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 
@@ -7,6 +11,10 @@ resultFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 #keySeparator=_GHNW
 keySeparator=_
 
+# tif: Vorhandene Image-Files werden vom Transfertool nicht neu hochgeladen...
+# xml: Vorhandene xml-Files werden von Captiva überschrieben...
+# ABER
+# zip: vorhandene zip-Files bleiben im Archiv erhalten, neue zip-Files erhalten einen neuen Namen mit runId.
 # Die Zeichen rechts vom "runIdSeparator" sind die runId. 
-# Die runId macht den Dateinamen im Dateisystem eindeutig. 
+# Die runId macht den Dateinamen für zip-Files im Dateisystem eindeutig. 
 runIdSeparator=.
