--- a/src/servlet.properties
+++ b/src/servlet.properties
@@ -3,13 +3,13 @@ imageFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 zipArchivFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
 
 # owner: Captiva
-zipFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
-resultFolderParent=E://Apps//RechenkernMain//fileReceptorEE//data//
+zipFolder=E://Data//Import//DiGest//
+resultFolder=E://Data//Export//DiGest//
 
 # Die Zeichen links vom "keySeparator" sind der fachliche Key. 
 # Dateien mit gleichem fachlichen Key werden in ein gemeinsames Zip-File gepackt
-#keySeparator=_GHNW
-keySeparator=_
+keySeparator=_GHNW
+#keySeparator=_
 
 # tif: Vorhandene Image-Files werden vom Transfertool nicht neu hochgeladen...
 # xml: Vorhandene xml-Files werden von Captiva überschrieben...
@@ -18,3 +18,8 @@ keySeparator=_
 # Die Zeichen rechts vom "runIdSeparator" sind die runId. 
 # Die runId macht den Dateinamen für zip-Files im Dateisystem eindeutig. 
 runIdSeparator=.
+
+# IRFAN_VIEW
+i_view_Path=E:\\Install\\IrfanView\\i_view32.exe
+#i_view_Path=C:\\dev\\Programme\\IrfanView\\i_view32.exe
+imageSubFolderJpg=jpg
