--- a/.classpath
+++ b/.classpath
@@ -8,11 +8,14 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_31">
+	<classpathentry kind="lib" path="lib/jetty-all-9.3.8.v20160314-uber.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jetty-all-9.3.8.v20160314-uber.jar"/>
+	<classpathentry kind="lib" path="lib/poi-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.11.jar"/>
+	<classpathentry kind="lib" path="lib/xmlparserv2-11.1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
